Added console test
Instead of using a button to test the id, i'll just use the console to
output the test results.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <head>
 </head>
 <body>
-<form>
-	<input id="CaseIdTxt" type="text" placeholder="abc123" />
-	<button id="TestBtn">Test</button>
-	<span id="ResultsTxt"></span>
-</form>
+<p> Fire up the console! </p>
 
 <!-- Jquery 1.x is the last to support IE8 and lower -->
 <!--[if lt IE 9]>
